@@ -15,6 +15,8 @@ Modules 3.2.10
 	* Fix the module swap with the --delim option (Tyson Whitehead)
 	* Increased the "update" buffer (Leon Kos)
 	* Use the locale for sorting modulefiles by the avail command
+	* Fixed the segfault problem with Tcl_RegExpCompile() (Kenneth Hoste,
+	  Tyson Whitehead)
 
 Modules 3.2.9
 Nov 24, 2011				R.K. Owen (rk@owen.sj.ca.us)
